@@ -1,3 +1,9 @@
+2005-06-01 11:39 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridSplitEdgeRatio, gridCollapseEdge) interpolate
+	and evaluate edge t, face uv, and xyz in a consistent manner
+	when gridSurfaceNodeConstrained true.
+
 2005-06-02 10:10 Mike Park  <mike.park@nasa.gov>
 
 	* Made 1.2.7 Release. ** internal release ** Snapshot after
